--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head> 
     <meta charset="UTF-8">
-    <title>Stephen Hendricks</title> 
+    <title>Matthew Mosinski Lab 3-6</title> 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Stephen Hendricks!</h1>
+    <h1>Matthew Mosinski!</h1>
     <h5>Lab 3-6 Works!</h5>
   </body>
 </html>
